--- a/header/index.html
+++ b/header/index.html
@@ -1,5 +1,5 @@
 <html>
-  <meta http-equiv="Cache-control" content="public" />
+ <meta http-equiv="Cache-control" content="public">
 <body>
 header test
 </body>
