--- a/header/index.html
+++ b/header/index.html
@@ -1,5 +1,5 @@
 <html>
- <meta http-equiv="Cache-control" content="public">
+ <meta http-equiv="Cache-control" content="max-age=7200, must-revalidate, public">
 <body>
 header test
 </body>
